<resources>
    <string name="app_name">Mom Care</string>
    <string name="str_Menu">Posyandu Apps</string>
    <string name="str_AbsensiKehadiran">Absensi Kehadiran</string>
    <string name="str_EduGizi">Edukasi untuk Ibu Hamil</string>
    <string name="str_DataIbu">Data Ibu Saat Posyandu</string>
    <string name="str_DataBayi">Data Bayi Saat Posyandu</string>">
    <string name="str_DataLansia">Data Lansia Saat Posyandu</string>
    <string name="str_Pengingat">Pengingat Jadwal Posyandu</string>
    <string name="str_Login">Login</string>
    <string name="str_Daftar">Register</string>
    <string name="str_username">Tap to Enter Username</string>
    <string name="str_password">Tap to Enter Password</string>
    <string name="str_EduBayi">Edukasi untuk Bayi </string>
    <string name="str_EduLansia">Edukasi untuk Lansia</string>
</resources>